compatibility for other users

--- a/libs/openCV/build.gradle
+++ b/libs/openCV/build.gradle
@@ -3,9 +3,10 @@ apply plugin: 'com.android.library'
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
