fixes after motor tests

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,4 +13,6 @@ apply from: '../build.common.gradle'
 dependencies {
     //implementation project(':libs:openCV')
     //implementation files(':libs/util-stream-1.0.18-sources.jar')
+    implementation project(':openCVLibrary3')
+    implementation project(':DogeCV')
 }
