--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':FtcRobotController', ':openCVLibrary3', ':DogeCV'
+include ':FtcRobotController', ':openCVLibrary3', ':DogeCV', ':commons-math3-3.6.1'
 include ':TeamCode'
 include ':Team9450'
